--- a/kafka-consumer/templates/deployment.yaml
+++ b/kafka-consumer/templates/deployment.yaml
@@ -19,9 +19,9 @@ spec:
       {{- end }}
       labels:
         {{- include "kafka-consumer.labels" . | nindent 8 }}
-        {{- with .Values.podLabels }}
-        {{- toYaml . | nindent 8 }}
-        {{- end }}
+          {{- with .Values.podLabels }}
+          {{- toYaml . | nindent 8 }}
+          {{- end }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
@@ -40,6 +40,11 @@ spec:
             - name: http
               containerPort: {{ .Values.service.port }}
               protocol: TCP
+          env:
+            - name: KAFKA_BOOTSTRAP_SERVERS
+              value: "{{ .Values.kafka.bootstrapServers }}"
+            - name: SCHEMA_REGISTRY_URL
+              value: "{{ .Values.kafka.schemaRegistryUrl }}"
           livenessProbe:
             {{- toYaml .Values.livenessProbe | nindent 12 }}
           readinessProbe:
