--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,8 @@
 server:
   port: 8082
+dbservice:
 
+  url: "http://todo-management-spring-boot.test.svc.cluster.local:8780/student/add"
 avro:
   topic:
     name: "avroTopic"
