--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,12 +8,14 @@ services:
       dockerfile: Dockerfile
     container_name: 'kafka-consumer'
     environment:
-      SPRING_KAFKA_BOOTSTRAPSERVERS: 127.0.0.1:9092
-
+      SPRING_KAFKA_BOOTSTRAPSERVERS: 172.20.0.1:9092
+      SCHEMA_REGISTRY_URL: "http://schema-registry:8081"
+      USE_DOCKER_COMPOSE: true
     ports:
       - '8082:8082'
     networks:
       - my-proxy-net
+
 networks:
   my-proxy-net:
     external:
