--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -54,8 +54,8 @@ spring.datasource.initialize=true
 spring.sql.init.mode=always
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=hrcore.europe@gmail.com
-spring.mail.password=bjqt nmae ksei filj
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
